@@ -18,6 +18,7 @@ Changelog for 1.3.31
 * Fixed language code changes delayed (Chris T, 3607220) 
 * Fixed order by on reconciliation screen not working (Chris T, 3607223)
 * Fixed country changes to companies not saving (Chris T, 3607437)
+* Fixed customer search on address data (Chris T, 3607436)
 
 Changelog for 1.3.30
 * Documented behavior of Outstanding Summary report (Chris T, 3601314)
